# Terminets

./: .gitignore  CHANGELOG.md  NOTICE  README.md  package-lock.json  package.json  split-rust.mjs  vite.config.js
.github/workflows/: node.js.yml
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/shell-runtime/: README.txt
src-tauri/src/: local_shell.rs  lookup.rs  main.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/ssh/: host_key.rs  manager.rs  mod.rs  probe.rs  session.rs  sftp.rs
src-tauri/src/telnet/: manager.rs  session.rs
src-tauri/src/vnc/: manager.rs  proxy.rs
src/assets/novnc/util/: browser.js
src/lib/: input-modal.js  layout-controller.js  map-helpers.js  metrics-helpers.js  modal-system.js  runtime.js  server-model.js  session-history.js  toast-system.js
src/public/assets/fonts/: fonts.css
