[package]
name = "terminey-desktop"
version = "2.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.1.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
base64 = "0.22"
dirs = "6"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sysinfo = "0.33"
portable-pty = "0.9"
keyring = "2.3"
